Change the CSS a bit to avoid small flicker on click

--- a/site/assets/scss/_component-examples.scss
+++ b/site/assets/scss/_component-examples.scss
@@ -442,11 +442,11 @@
   --bs-border-color: var(--bs-border-color-translucent);
 }
 
-.color-copy:hover {
+.color-copy:hover svg {
   transform: scale(1.07);
 }
 
-.color-copy {
+.color-copy svg {
   // stylelint-disable-next-line property-disallowed-list
   transition: transform .15s ease-in-out;
 }
